--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:SSyKGyPthlUkWQbyGt8IK+ExAXyfpwKRzsQ4GjBkcTE=
 APP_DEBUG=true
-APP_URL=https://sibali.herokuapp.com/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
